# edge-training

./: .gitattributes  README.md  cli.py  dedup_results.json  implementation_plan.md.resolved  pyproject.toml  walkthrough.md.resolved
.claude/: settings.local.json
api/: __init__.py  dependencies.py  routes.py  schemas.py
api/tests/: test_routes.py  test_schemas.py
docs/: CODING_STANDARDS.md  QUICKSTART-GUIDE.md
docs/research/: object_counting_techniques.md
integrations/: catalog.py
integrations/hetzner/: config.py  provider.py
integrations/huggingface/: __init__.py  config.py  provider.py
integrations/kaggle/: __init__.py  dataset.py
integrations/roboflow/: dataset.py  provider.py
integrations/runpod/: config.py  provider.py
notebooks/: yolo_template.ipynb
pipeline/: modal_volume.py  spatial_inference.py
pipeline/dataset/: __init__.py  config.py  (+1 more)
scripts/: add_splits_to_volume.py  apply_log_classifications.py  clear_cache.py  coco_to_jsonl.py  coco_to_yolo.py  deduplicate_dataset.py  fix_dataset_structure.py  fix_labels.py  infer_rfdetr.py  main.py  modal_dedup.py  modal_dedup_fast.py  preprocessing.py  reclassify_usd_sides.py  remove_backgrounds.py  remove_duplicates.py  reupload_hf_to_volume.py  test_modal.py  test_rfdetr.py  test_volume.py  train.py  train_chunked.py  train_rfdetr.py  train_yolo11.py  validate_dataset.py  verify_classifications.md.resolved  verify_classifications.py
server/: main.py
service/: __init__.py  config.py  export_service.py  inference_service.py  models.json  planner.py  yolo_training.py
tests/: conftest.py
(+42 files in other folders)
